@startuml GeneratorSpec
left to right direction
package java.util.function {
    interface Supplier<T> {
        T get();
    }
}

package ohm.softa.a12.icndb {
    class JokeGenerator {
        +randomJokesStream(): Stream<JokeDto>
        +allJokesStream(): Stream<JokeDto>
    }

    class AllJokesIterator implements Iterator {
	}

	class RandomJokeSupplier implements Supplier {
	}

    JokeGenerator -- AllJokesIterator : "uses"
    JokeGenerator -- RandomJokeSupplier : "uses"
}

@enduml
